--- a/config.toml
+++ b/config.toml
@@ -72,7 +72,7 @@ map_longitude = "112.6237298118676"
 map_marker = "images/marker.png" # marker size 37*55 px
 # cookies
 [params.cookies]
-enable = true
+enable = false
 expire_days = 2
 
  # themify icon : https://themify.me/themify-icons
