--- a/data/id/homepage.yml
+++ b/data/id/homepage.yml
@@ -80,7 +80,7 @@ course:
 
 ########################## Call to action ############################
 cta:
-  enable : true
+  enable : false
   subtitle : "Klik untuk Bergabung dengan Lokarya Lanjutan"
   title : "Pelatihan dalam Pendidikan Digitalisasi"
   button:
