--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -99,7 +99,7 @@ success_story:
 
 ############################# event ################################
 event:
-  enable : true
+  enable : false
   title : "Upcoming Events"
   # event item comes from "content/**/event" folder.
 
@@ -125,7 +125,7 @@ funfacts:
 
 ############################# blog ################################
 blog:
-  enable : true
+  enable : false
   title : "Latest Post"
   # blog item comes from "content/**/blog" folder.
 
